<resources>
    <string name="app_name">Real estates</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_address">the address is not found</string>
    <string name="sitting">Siting</string>
    <string name="home">Home</string>
    <string name="Favorate">Favorite</string>
    <string name="Add">Add</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing Up</string>
    <string name="remember_me">Remember Me</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="e_email">E-Email</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here.</string>
    <string name="change_language">Change Language</string>
    <string name="log_out">Log Out</string>
    <string name="share_app">Share App</string>
    <string name="about_app">About App</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="your_phone">Your phone</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="address">Address</string>
    <string name="send">Send</string>
    <string name="welcome_to_app">Welcome To App</string>
    <string name="real_estates">Real Estates</string>
    <string name="call_us">Call Us</string>
    <string name="deleted">deleted from favorite</string>
    <string name="added"> Added to favorite</string>
    <string name="enter_name"> please enter correct Name</string>
    <string name="enter_last"> please enter correct last name</string>
    <string name="enter_phone"> please enter correct phone</string>
    <string name="enter_email"> please enter correct email</string>
    <string name="enter_pass"> please enter correct password</string>
    <string name="success"> The login is ssuccessfly</string>
    <string name="error_one"> error in login</string>
    <string name="errer_two"> error in service</string>
    <string name="successsign"> The sign up is ssuccessfly</string>
    <string name="errorsign"> error in sign up</string>
    <string name="added_ad"> added your add</string>
    <string name="network"> please Connect to the Internet </string>
    <string name="permission"> Permission DENIED</string>





</resources>
