<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/whitee"
            tools:context=".ui.AddReal_States">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageres"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_photo_camera_black_24dp" />
                <EditText
                    android:id="@+id/name"
                    app:fontFamily="@font/changa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/name"
                    android:textSize="20dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/Descrp"
                    app:fontFamily="@font/changa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/description"
                    android:textSize="20dp"
                    android:textColor="@color/black" />
                <EditText
                    android:id="@+id/phone"
                    app:fontFamily="@font/changa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/your_phone"
                    android:textSize="20dp"
                    android:inputType="number"
                    android:textColor="@color/black" />


                <EditText
                    android:id="@+id/priceed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/price"
                    android:textSize="20dp"
                    app:fontFamily="@font/changa"
                    android:inputType="text"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/sizeed"
                    app:fontFamily="@font/changa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/size"
                    android:inputType="text"
                    android:textSize="20dp"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/adressed"
                    app:fontFamily="@font/changa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textSize="20dp"
                    android:textColor="@color/black" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/send"
                    app:fontFamily="@font/changa"                    android:textStyle="bold"
                    android:layout_marginTop="40dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:id="@+id/btsend" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>