<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".sign.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="140dp"
                tools:ignore="MissingConstraints"
                app:fontFamily="@font/changa"
                android:text="@string/welcome_to_app"
                android:textColor="#fff"
                android:textSize="35sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/liner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/editemaillogin"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="15dp"
                    android:background="#11000000"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="E-email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/whitee"
                    android:textSize="16dp" />

                <com.subhrajyoti.passwordview.PasswordView
                    android:id="@+id/editpasswordlogin"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:background="#11000000"
                    android:drawableLeft="@drawable/ic_enhanced_encryption_black_24dp"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    app:strikeThrough="true"
                    android:hint="Password"
                    android:textColor="@color/whitee" />

                <!--
                                <EditText
                                    android:id="@+id/editpasswordlogin"
                                    android:layout_width="250dp"
                                    android:layout_height="40dp"
                                    android:background="#11000000"
                                    android:drawableLeft="@drawable/ic_visibility_off_black_24dp"
                                    android:drawablePadding="8dp"
                                    android:ems="10"
                                    android:hint="Password"
                                    android:inputType="textPassword"
                                    android:textColor="@color/whitee" />
                -->



                    <CheckBox
                        android:id="@+id/chekbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/editpasswordlogin"
                        android:text="@string/remember_me"
                        app:fontFamily="@font/changa"
                        android:textColor="@color/whitee" />



            </LinearLayout>


            <androidx.cardview.widget.CardView

                android:id="@+id/lologin"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_above="@+id/sinlogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="130dp"
                android:layout_marginBottom="5dp"

                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">


                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="casual"
                        android:text="@string/login"
                        android:textColor="#fff"
                        app:fontFamily="@font/changa"

                        android:textSize="28sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/sinlogin"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_above="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="31dp"

                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="25dp"
                app:cardElevation="10dp">


                <RelativeLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="casual"
                        android:text="@string/sing_up"
                        app:fontFamily="@font/changa"

                        android:textColor="#fff"
                        android:textSize="28sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>


           <!-- <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="6dp"
                android:text="Register Here." />-->


<!--
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8sp"
                    app:srcCompat="@drawable/twitter" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8sp"
                    app:srcCompat="@drawable/instagram" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8sp"
                    app:srcCompat="@drawable/facebook" />

            </LinearLayout>
-->
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>